# gbtest

./: .gitignore  .gitmodules  README.md  init_windows.sh  start_emulators.sh
client/: compile.sh
client/src/: main.c
server/: Cargo.toml  compile.sh
server/src/: app.rs  apps.rs  client.rs  clients.rs  commands.rs  engine.rs  main.rs  server.rs
server/src/apps/: app.rs  bouncing_balls.rs  display_image.rs  fill_screens.rs  show_info.rs
server/src/clients/: client.rs  driver.rs  gameboy.rs  gameboycolor.rs  screen.rs
server/src/engine/: color.rs  sprite.rs  tile.rs  world.rs
