[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.3"
image = "0.24.4"
lazy_static = "1.4.0"
log = "0.4.17"
parry2d = { version = "0.10.0" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
